test/selfTest/MYtest_03.spl
int add(int a, int b) {
  return a + b;
}

int minus(int c, int d) {
  return c - d;
}

int main() {
  int result = add(5, 7.5);
  float result = minus(5, 7.5);
  return 0;
}
